# ChangeLog for www-servers/nginx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header:

  05 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> nginx-0.8.13.ebuild,
  nginx-0.8.13-r10.ebuild:
  drop untested keywords
