@@ -1,6 +1,6 @@
 DIST PacketTracer51_generic.tar.gz 116561938 RMD160 78833aad40e6ff6873aa1a0e1849bd4cc1d55269 SHA1 9f24e941a7857dbf21f04544b12a8636e894aeeb SHA256 7ab982854a0c179c04b7ec7b1db68fb8791cceb421b209af12fc64e86f4334d2
 DIST PacketTracer52.tar.gz 92711603 RMD160 6382c7f5d1286f0335a07178a7b29dc043ef3600 SHA1 469a2e064808ad0a5b86aa9efbea8d3419bbb90d SHA256 c35d68e5143fd1b424764161cd97a3c7366880f9b732a87c31d06eea1f8fc03b
 EBUILD packettracer-51-r4.ebuild 2475 RMD160 ace9f6785807e02dc1714e3ab58912c2e7b850a6 SHA1 3d927b09b9f407a8d681a14cf32375d774039e34 SHA256 ab791ff90ceb5b49dc8b35fabc9b52127cdba8e8bd5df7c5ca82abb6970b19a5
-EBUILD packettracer-52.ebuild 3130 RMD160 5035eccdff8f6e1598581b9ad158f8c6c2271ee3 SHA1 c9c9b1ae86cb55de7778f45d2091c144c3a7c947 SHA256 dace90c299464cfd51024fd96a46ff68e13cdcf5237cb07fb33bda9e3bcf1602
+EBUILD packettracer-52.ebuild 2947 RMD160 98abab79cea985b3ddef3528894ff84cc1328169 SHA1 b275a4a00e368559eac9279af67445e2f327cdbf SHA256 612fb49fca9ce7e685ccd9c3c648d627fa016065cd6e3340fff857429367f560
 MISC ChangeLog 1099 RMD160 0c373607f57b28b5f83df5ac711bfa695093b1ae SHA1 04256199a396a60bd57cdd7179ce010787a74d98 SHA256 98f442449fce25bf5375645d0dea8590a2039b4fe433fca79a540e5a3e85c80b
 MISC metadata.xml 604 RMD160 d1b88107696f095f674c79d5b4512302af968eb1 SHA1 c91467f615e608f09b68048fa9bd1ecdb8975aae SHA256 de013db7d9e6f363aa6b0f79e967ddb646a10042eb673075dc905417f4d021c3
