@@ -3,8 +3,10 @@ AUX nginx-r1 1645 RMD160 d032feec43e4ba31ac5b6fffec478ebbeb49db60 SHA1 49f0db3ef
 AUX nginx.conf-r4 1473 RMD160 012556820bf2fe804454822cf88dbeb107a48715 SHA1 b0001ae5ab7fc9897ec27e3e40b34b09d5b06da3 SHA256 d8267e217a19283b0d972ad9f74348c467b8629583ebea27d5ee90b9e7669070
 DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b0b SHA1 1428a7cecdad89de031f829b3fa485a8832b3f62 SHA256 e018221eba4ac91b5cbaabd440c2da72675c8432be12e001321293014a3d87e7
 DIST nginx-0.8.16.tar.gz 606603 RMD160 46640e405584e4713ee86a0bc6e219017573daef SHA1 5622d5c9dfafbb10860c27a11d0a50bd4e724d3d SHA256 823cf3c26840f8ab8742da2e857c31d902bc4a95a716abfeab1e5c6d8b8189da
+DIST nginx-0.8.20.tar.gz 609292 RMD160 53fd1443eb5fcdd2795d2481d74c81743834ad1a SHA1 8a215095747e690822d82011818eb140889be3fe SHA256 8c2a965ffb5e5cb2361aa5841134c9163637564f1df1ad1afab1fae8a216ac86
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 EBUILD nginx-0.8.16-r1.ebuild 4984 RMD160 c0427e477e934f245def736caa1a9debbc26291c SHA1 70dc9c4284e7b5e424342d9985ef7b25521c1fe3 SHA256 c56cedee10776250a373b8f9015740f6bd0a8ffc02c7662a39baf320d63ad3d6
-MISC ChangeLog 243 RMD160 ca59a8331f989a31c52085575f8948b7097f8be5 SHA1 ae11d1d2a1f550aff6f3c077dea1e7140f1f33fa SHA256 c190c0801ab4a06de63c1560961a7ea3e14166f7f1adfcf15edb0d065bdadb9e
+EBUILD nginx-0.8.20-r50.ebuild 4984 RMD160 c0427e477e934f245def736caa1a9debbc26291c SHA1 70dc9c4284e7b5e424342d9985ef7b25521c1fe3 SHA256 c56cedee10776250a373b8f9015740f6bd0a8ffc02c7662a39baf320d63ad3d6
+MISC ChangeLog 343 RMD160 de7b2c3be5e50a474be90fce2a352fe685349d8e SHA1 9db70ef45d44890be4b312dd29932b0c9de530ee SHA256 1aa1d65ab0d161d6408323eca807e86a99de81f52c933670fa015fb72249a84b
 MISC metadata.xml 1338 RMD160 3586b779c10dab5eaacbef98ddbe23196a2de648 SHA1 31af3d4de39856167e0095230494b86d02416b48 SHA256 0e72f15f93867c9865c7a1360d1b32a94d0b59d60805b454184a78513d2c6148
