@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
+  20 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +nginx-0.8.20-r50.ebuild:
+  add new version
+
   05 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> nginx-0.8.13.ebuild,
   nginx-0.8.13-r10.ebuild:
   drop untested keywords
